Corrects gap

--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -5,8 +5,17 @@
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    grid-row-gap: 1.9%;
-    grid-column-gap: 0.7%;
+    gap: 2px;
+    
+    @include tablet {
+        padding: 0 40px;
+        gap: 4px;
+    }
+    @include desktop {
+        padding: 0 40px;
+        gap: 7px;
+    }
+            
         
 }
 .gallery__img {
@@ -71,7 +80,6 @@
 }
 .gallery__item {
     transform: scale(1);
-   
 }
 @keyframes scales {
     0% {
@@ -98,8 +106,16 @@
     margin: 20px auto;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    grid-row-gap: 1.9%;
-    grid-column-gap: 0.7%;
+    gap: 2px;
+    
+    @include tablet {
+        padding: 0 40px;
+        gap: 4px;
+    }
+    @include desktop {
+        padding: 0 40px;
+        gap: 7px;
+    }
 }
 .gallery__item-2:nth-child(1) {
     grid-column: 1/2;
